--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <slf4j.version>1.7.25</slf4j.version>
     <logback.version>1.2.2</logback.version>
     <lombok.version>1.16.16</lombok.version>
+    <apache-poi.version>3.16-beta2</apache-poi.version>
   </properties>
 
   <dependencies>
@@ -33,6 +34,18 @@
 	    <version>1.16.14.0</version>
 	</dependency>
 
+  	<dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi</artifactId>
+    	<version>${apache-poi.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>${apache-poi.version}</version>
+	</dependency>
+	
   
     <dependency>
       <groupId>junit</groupId>
