--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <logback.version>1.2.2</logback.version>
     <lombok.version>1.16.16</lombok.version>
     <apache-poi.version>3.16-beta2</apache-poi.version>
+    <apache-common-io.version>2.5</apache-common-io.version>
   </properties>
 
   <dependencies>
@@ -44,6 +45,12 @@
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>${apache-poi.version}</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>${apache-common-io.version}</version>
 	</dependency>
 	
   
